[project]
name = "navitime-reachable-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Yui Semba",email = "65758369+semba-yui@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "shapely (>=2.1.1,<3.0.0)",
    "folium (>=0.19.6,<0.20.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
